crates/toml_edit/tests/snapshots/invalid/integer/trailing-us-oct.stderr
TOML parse error at line 1, column 22
  |
1 | trailing-us-oct = 0o1_
  |                      ^
`_` may only go between digits, expected nothing
